<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/main_activity_margin"
    android:paddingLeft="@dimen/main_activity_margin"
    android:paddingRight="@dimen/main_activity_margin"
    android:paddingTop="@dimen/main_activity_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.vitaliyhtc.lcbo.MainActivity"
    >

    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:id="@+id/imageViewAppIcon"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/nav_header_icon_content_description"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/textViewAppName"
        android:layout_alignTop="@+id/imageViewAppIcon"
        android:layout_toRightOf="@+id/imageViewAppIcon"
        android:layout_toEndOf="@+id/imageViewAppIcon"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:textColor="@color/black"
        android:textSize="24sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_app_version"
        android:id="@+id/textViewAppVersion"
        android:layout_below="@+id/textViewAppName"
        android:layout_toRightOf="@+id/imageViewAppIcon"
        android:layout_toEndOf="@+id/imageViewAppIcon"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/black" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_copyright"
        android:id="@+id/textViewAuthor"
        android:layout_below="@+id/textViewAppVersion"
        android:layout_toRightOf="@+id/imageViewAppIcon"
        android:layout_toEndOf="@+id/imageViewAppIcon"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/black" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_app_version_description"
        android:id="@+id/textView1"
        android:layout_below="@+id/textViewAuthor"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_app_description"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />




    <Button
        android:text="Disabled!"
        android:textAllCaps="false"
        android:textSize="13sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:id="@+id/disabledButton"
        android:layout_below="@+id/textView2"
        style="@style/Widget.AppCompat.Button.Small" />
    <Button
        android:text="clearStoresTable()"
        android:textAllCaps="false"
        android:textSize="13sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:id="@+id/clearStoresTableButton"
        android:layout_below="@+id/openTestActivityButton"
        style="@style/Widget.AppCompat.Button.Small" />
    <Button
        android:text="clearProductsTable()"
        android:textAllCaps="false"
        android:textSize="13sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:id="@+id/clearProductsTableButton"
        android:layout_below="@+id/clearStoresTableButton"
        style="@style/Widget.AppCompat.Button.Small" />

</RelativeLayout>
